--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
 security.basic.enabled=false
+
+spring.datasource.url=jdbc:mysql://localhost:3307/jleague13
+spring.datasource.username=root
+spring.datasource.password=localpassword
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
