--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: java
+
 jdk:
   - oraclejdk8
-before_script: mysql -e 'create database jleague13;'
+
+before_script:
+  - mysql -e 'create database jleague13;'
+
 script: mvn liquibase:update tomcat7:redeploy
