--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: java
 jdk:
   - oraclejdk8
 
-before_script:
+before_install:
   - mysql -e 'create database jleague13;'
 
 script: mvn liquibase:update tomcat7:redeploy
