--- a/src/test/resources/test-jdbc.properties
+++ b/src/test/resources/test-jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3307/jleague13
-jdbc.username=root
-jdbc.password=localpassword
+jdbc.url=jdbc:mysql://localhost:3306/jleague13
+jdbc.username=travis
+jdbc.password=
