--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 security.basic.enabled=false
 
-spring.datasource.url=jdbc:mysql://localhost:3306/jleague13
+spring.datasource.url="jdbc:mysql://localhost:3306/jleague13?useUnicode=true&amp;characterEncoding=utf8"
 spring.datasource.username=jleague
 spring.datasource.password=jurassicpark
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
