fixed mysql encoding

--- a/src/test/resources/test-jdbc.properties
+++ b/src/test/resources/test-jdbc.properties
@@ -1,4 +1,4 @@
 jdbc.driverClassName=com.mysql.jdbc.Driver
-jdbc.url=jdbc:mysql://localhost:3306/jleague13
+jdbc.url=jdbc:mysql://localhost:3306/jleague13?useUnicode=true&characterEncoding=utf8
 jdbc.username=travis
 jdbc.password=
