--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/jleague13?useUnicode=true&char
 spring.datasource.username=jleague
 spring.datasource.password=jurassicpark
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+
+spring.resources.cache-period=100
+
+images.dir=/Library/Tomcat/webapps/images
