--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,9 +1,10 @@
 security.basic.enabled=false
 
-spring.datasource.url=jdbc:mysql://localhost:3306/jleague13?useUnicode=true&characterEncoding=utf8
+spring.datasource.url=jdbc:mysql://localhost:3306/jleague13?useUnicode=true&characterEncoding=utf8&autoReconnect=true
 spring.datasource.username=jleague
 spring.datasource.password=jurassicpark
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+logging.level.ru.jleague13=DEBUG
 
 spring.resources.cache-period=100
 
