* added teams header  * added footer  * added transfer download code

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,8 @@ spring.datasource.username=jleague
 spring.datasource.password=jurassicpark
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 logging.level.ru.jleague13=DEBUG
+spring.datasource.testOnBorrow=true
+spring.datasource.validationQuery=SELECT 1
 
 spring.resources.cache-period=100
 
