Create admin layout started to move admin templates to it

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,3 +11,6 @@ spring.datasource.validationQuery=SELECT 1
 spring.resources.cache-period=100
 
 images.dir=/var/lib/tomcat7/images
+
+spring.http.multipart.max-file-size=10MB
+spring.http.multipart.max-request-size=100MB
