--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,7 @@ spring.datasource.validationQuery=SELECT 1
 spring.resources.cache-period=100
 
 images.dir=/var/lib/tomcat7/images
+download.dir=/var/lib/tomcat7/download
 
 spring.http.multipart.max-file-size=10MB
 spring.http.multipart.max-request-size=100MB
