--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@ spring.datasource.username=jleague
 spring.datasource.password=jurassicpark
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 logging.level.ru.jleague13=DEBUG
-logging.level.org.springframework=DEBUG
+#logging.level.org.springframework=DEBUG
 spring.datasource.testOnBorrow=true
 spring.datasource.validationQuery=SELECT 1
 
