--- a/pom.xml
+++ b/pom.xml
@@ -121,7 +121,7 @@
 				<version>2.2</version>
 				<configuration>
 					<url>http://52.28.238.73:8085/manager/text</url>
-					<path>/</path>
+					<path>/www</path>
 					<username>maven</username>
 					<password>${env.TOMCAT_PASS}</password>
 				</configuration>
@@ -151,7 +151,7 @@
 				<artifactId>maven-war-plugin</artifactId>
 				<version>2.3</version>
 				<configuration>
-					<warName>ROOT.war</warName>
+					<warName>ROOT</warName>
 				</configuration>
 			</plugin>
 		</plugins>
