--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,6 +1,6 @@
 security.basic.enabled=false
 
-spring.datasource.url=jdbc:mysql://localhost:3306/jleague13?useUnicode=true&autoReconnect=true
+spring.datasource.url=jdbc:mysql://localhost:3306/jleague13?useUnicode=true&characterEncoding=utf8&autoReconnect=true
 spring.datasource.username=travis
 spring.datasource.password=
 spring.datasource.driver-class-name=com.mysql.jdbc.Driver
